Sutter Health/src/objects/Non_Active_Provider__c.object
<CustomObject>
    <description>Stores providers who have been retired or not active in EPIC.</description>
    <fields>
        <fullName>Deleted_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if a provider has been removed from list of providers to contact.</description>
        <label>Deleted Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Stores the provider&apos;s email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>Store&apos;s the provider&apos;s first name</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Stores the provider&apos;s last name</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <description>Stores the Provider ID</description>
        <label>Provider ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Non Active Provider</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Email__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Provider_ID__c</columns>
        <columns>Deleted_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Active Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>